对内存结构的笔记进行整理排版, 增加垃圾回收涉及到的概念描述